--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ h2 {
     margin-top: 20px;
 }
 
-h3 {
+h3.about-header {
     font-family: 'Playfair Display', serif;
     font-style: italic;
     text-align: center;
@@ -70,9 +70,7 @@ h3 {
     font-size: 1.5rem;
 }
 
-h4,
-h5,
-h6 {
+h3, h4, h5, h6 {
     font-family: 'Playfair Display', serif;
     font-style: italic;
     text-align: center;
